--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ siteStartYear: 2023
 #   https://www.google.com/search?q=
 # homeHost：要搜索的站点域名，不配置默认取当前页面的域名
 searchEngine: https://www.google.com/search?q=
-homeHost: wujun234.github.io
+homeHost: blog.matteo.eu.org
 
 tags: true
 categories: true
